--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,10 @@
   --gray-gradient: rgba(var(--gray-light), 50%), #fff;
   --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
     0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
+  --box-shadow-sm: 0 2px 6px rgba(var(--gray), 25%),
+    0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
+
+  --main-border-color: #e6e6e6;
 
   --font-heading: "Source Serif 4", serif;
   --font-body: "IBM Plex Sans", sans-serif;
@@ -90,6 +94,7 @@
   --gray-gradient: rgba(0, 43, 54, 0.8), #002b36; /* Solarized base03 gradient */
   --box-shadow: 0 2px 6px rgba(0, 0, 0, 40%),
     0 8px 24px rgba(0, 0, 0, 50%), 0 16px 32px rgba(0, 0, 0, 50%);
+  --box-shadow-sm: 0 2px 2px rgba(0, 0, 0, 40%);
 
   .astro-code,
   .astro-code span {
@@ -139,7 +144,6 @@ body {
 }
 
 main {
-  width: 720px;
   max-width: calc(100% - 2em);
   margin: auto;
   padding: 3em 1em;
