Hack for Table of Contents ToC positioning
This forces the ToC into the .prose div as a child of the post content.
Doing this allows images and other content to break out of the grid column.
This hack moves the ToC into the right column, bumps it to the top (grid-row: 1/ -1),
and shrinks it's height so it whatever content element in the same row doesn't take
up any space.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,7 +42,7 @@ const today = new Date();
         >
       </a>
 
-      <a href="/feed.xml" aria-label="rss">
+      <a href="/rss.xml" aria-label="rss">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
           ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
             id="SVGRepo_tracerCarrier"
