--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -207,6 +207,8 @@ img {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
+  z-index: 1;
+  position: relative;
 }
 code {
   padding: 2px 5px;
