WIP on adding references/citations

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -138,6 +138,18 @@ const imageData = getImageData();
         align-self: start;
       }
 
+      :global(.csl-bib-body) {
+        font-size: 0.7em;
+      }
+
+      :global(.csl-entry) {
+        margin-bottom: 0.8em;
+        margin-left: 1.5em;
+        display: list-item;
+        list-style: decimal;
+        line-height: 1.6em;
+      }
+
       /* Responsive adjustments for ToC */
       @media (max-width: 1279px) {
         /* .prose {
