--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -93,10 +93,9 @@ const imageData = getImageData();
         color: var(--sol-7);
         flex-shrink: 0;
         text-align: right;
-        padding: 0.25em 0;
       }
       .last-updated-on {
-        margin-top: 0.6em;
+        padding-top: 0.5em;
       }
       .tags {
         display: flex;
@@ -106,8 +105,7 @@ const imageData = getImageData();
       .tag {
         background: rgb(var(--accent));
         color: var(--blue);
-        padding: 0.25em 0.5em;
-        padding-left: 0;
+        padding-right: 0.5em;
         border-radius: 0.25em;
         text-decoration: none;
         transition: background-color 0.2s ease;
