Tweak page animations

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -163,6 +163,30 @@ const imageData = getImageData();
           grid-column: 1 !important;
         }
       }
+
+      .slide-in-block {
+        opacity: 0;
+        filter: blur(10px);
+        transform: scale(0.95);
+        will-change: transform, opacity, filter;
+        animation: slideInBlock 0.4s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
+      }
+
+      .slide-in-block:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      .slide-in-block:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+
+      @keyframes slideInBlock {
+        to {
+          opacity: 1;
+          filter: blur(0px);
+          transform: scale(1);
+        }
+      }
     </style>
   </head>
 
@@ -170,7 +194,7 @@ const imageData = getImageData();
     <Header />
     <main>
       <article>
-        <header class="title">
+        <header class="title slide-in-block">
           <div class="title-container">
             <div class="title-meta">
               <span>{type}</span>
@@ -203,7 +227,7 @@ const imageData = getImageData();
               </div>
             </div>
           </div>
-          <div class="hero-image">
+          <div class="hero-image slide-in-block">
             {
               imageData && (
                 <Image
@@ -216,7 +240,7 @@ const imageData = getImageData();
             }
           </div>
         </header>
-        <div class="prose">
+        <div class="prose slide-in-block">
           <slot />
           <TableOfContents headings={headings || []} />
         </div>
