--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,8 +54,9 @@ const allPostsData = posts.map((post) => {
       <span class="word">I'm</span>
       <span class="word">Tyler</span>
     </h1>
-    <p class="animated-subtitle">
-      <span class="word">I'm</span>
+    <p class="animated-subtitle slide-in-block">
+      I'm a software engineer with a passion for building things.
+      <!-- <span class="word">I'm</span>
       <span class="word">a</span>
       <span class="word">software</span>
       <span class="word">engineer</span>
@@ -64,7 +65,7 @@ const allPostsData = posts.map((post) => {
       <span class="word">passion</span>
       <span class="word">for</span>
       <span class="word">building</span>
-      <span class="word">things.</span>
+      <span class="word">things.</span> -->
     </p>
   </section>
   <section class="posts slide-in-block">
@@ -111,7 +112,7 @@ const allPostsData = posts.map((post) => {
   .dot-1 {
     width: 700px;
     height: 700px;
-    right: -200px;
+    left: -200px;
     top: -200px;
     background: #25df53;
     animation: dot-animation-1 20s infinite ease-in-out;
@@ -129,7 +130,6 @@ const allPostsData = posts.map((post) => {
   .dot-3 {
     width: 600px;
     height: 600px;
-    right: -100px;
     top: 150px;
     background: #bd3690;
     animation: dot-animation-3 20s infinite ease-in-out;
@@ -222,14 +222,14 @@ const allPostsData = posts.map((post) => {
     opacity: 0;
     transform: translateY(100%) translateZ(0);
     filter: blur(20px);
-    animation: wordSlideIn 0.8s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
+    animation: wordSlideIn 0.4s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
   }
 
   .animated-heading .word {
     animation-delay: calc(var(--word-index, 0) * 0.05s);
   }
 
-  .animated-subtitle .word {
+  .animated-subtitle .word { */
     animation-delay: calc(0.15s + var(--word-index, 0) * 0.05s);
   }
 
@@ -252,7 +252,7 @@ const allPostsData = posts.map((post) => {
     --word-index: 2;
   }
 
-  .animated-subtitle .word:nth-child(1) {
+  /* .animated-subtitle .word:nth-child(1) {
     --word-index: 0;
   }
   .animated-subtitle .word:nth-child(2) {
@@ -281,7 +281,7 @@ const allPostsData = posts.map((post) => {
   }
   .animated-subtitle .word:nth-child(10) {
     --word-index: 9;
-  }
+  } */
 
   .posts {
     max-width: 800px;
@@ -318,9 +318,18 @@ const allPostsData = posts.map((post) => {
     filter: blur(10px);
     transform: scale(0.95);
     will-change: transform, opacity, filter;
-    animation: slideInBlock 0.8s cubic-bezier(0.43, 0.195, 0.02, 1) 1s forwards;
+    animation: slideInBlock 0.4s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
   }
 
+  .animated-subtitle.slide-in-block {
+    animation-delay: 0.4s;
+  }
+
+  .posts.slide-in-block {
+    animation-delay: 0.6s;
+  }
+
+  
   @keyframes slideInBlock {
     to {
       opacity: 1;
