Fix regression w/ ToC and clean-up

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Image from "astro/components/Image.astro";
+import { Image } from "astro:assets";
 ---
 
 <BaseLayout title="About">
