--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -130,21 +130,6 @@
   }
 }
 
-/* @font-face {
-  font-family: "Atkinson";
-  src: url("/fonts/atkinson-regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Atkinson";
-  src: url("/fonts/atkinson-bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-} */
-
 /* Monochromatic scrolling grain overlay */
 /* body::before {
   content: "";
@@ -161,11 +146,11 @@
 } */
 
 /* Make sure body has proper positioning for the overlay */
-html,
+/* html,
 body {
   min-height: 100%;
   position: relative;
-}
+} */
 
 body {
   font-family: var(--font-body);
@@ -264,6 +249,9 @@ img {
   border-radius: 8px;
   z-index: 1;
   position: relative;
+}
+video {
+  z-index: 1;
 }
 code {
   padding: 2px 5px;
