--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -54,6 +54,7 @@ const imageData = getImageData();
         width: calc(100% - 2em);
         max-width: 100%;
         margin: 0;
+        overflow-x: hidden;
       }
 
       .title {
@@ -132,6 +133,30 @@ const imageData = getImageData();
         grid-column: 2;
       }
 
+      .slide-in-block {
+        opacity: 0;
+        filter: blur(10px);
+        transform: scale(0.95); 
+        will-change: transform, opacity, filter;
+        animation: slideInBlock 0.4s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
+      }
+
+      .slide-in-block:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      .slide-in-block:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+
+      @keyframes slideInBlock {
+        to {
+          opacity: 1;
+          filter: blur(0px);
+          transform: scale(1);
+        }
+      }
+
       .toc-container {
         grid-column: 3 !important;
         height: fit-content;
@@ -152,39 +177,8 @@ const imageData = getImageData();
 
       /* Responsive adjustments for ToC */
       @media (max-width: 1279px) {
-        /* .prose {
-          grid-template-columns: 1fr;
-          gap: 1rem;
-        }
-        .prose > :global(*) {
-          grid-column: 1;
-        } */
         .title {
           grid-column: 1 !important;
-        }
-      }
-
-      .slide-in-block {
-        opacity: 0;
-        filter: blur(10px);
-        transform: scale(0.95);
-        will-change: transform, opacity, filter;
-        animation: slideInBlock 0.4s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
-      }
-
-      .slide-in-block:nth-child(2) {
-        animation-delay: 0.2s;
-      }
-
-      .slide-in-block:nth-child(3) {
-        animation-delay: 0.4s;
-      }
-
-      @keyframes slideInBlock {
-        to {
-          opacity: 1;
-          filter: blur(0px);
-          transform: scale(1);
         }
       }
     </style>
@@ -240,7 +234,7 @@ const imageData = getImageData();
             }
           </div>
         </header>
-        <div class="prose slide-in-block">
+        <div class="prose">
           <slot />
           <TableOfContents headings={headings || []} />
         </div>
