--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,11 +43,6 @@ const allPostsData = posts.map((post) => {
 ---
 
 <BaseLayout>
-  <div class="animatedwrapper">
-    <div class="optimized-dot dot-1"></div>
-    <div class="optimized-dot dot-2"></div>
-    <div class="optimized-dot dot-3"></div>
-  </div>
   <section class="heading">
     <h1 class="animated-heading">
       <span class="word">Hi,</span>
@@ -56,16 +51,6 @@ const allPostsData = posts.map((post) => {
     </h1>
     <p class="animated-subtitle slide-in-block">
       I'm a software engineer with a passion for building things.
-      <!-- <span class="word">I'm</span>
-      <span class="word">a</span>
-      <span class="word">software</span>
-      <span class="word">engineer</span>
-      <span class="word">with</span>
-      <span class="word">a</span>
-      <span class="word">passion</span>
-      <span class="word">for</span>
-      <span class="word">building</span>
-      <span class="word">things.</span> -->
     </p>
   </section>
   <section class="posts slide-in-block">
@@ -88,119 +73,12 @@ const allPostsData = posts.map((post) => {
 </BaseLayout>
 
 <style>
-  .animatedwrapper {
-    overflow: hidden;
-    position: absolute;
-    right: 0px;
-    top: -100px;
-    z-index: -1;
-    width: 100%;
-    height: 1500px;
-    isolation: isolate;
-  }
-
-  /* Optimized animated dots - using fewer DOM elements with CSS variables */
-  .optimized-dot {
-    position: absolute;
-    border-radius: 50%;
-    filter: blur(60px);
-    opacity: 0.9;
-    mix-blend-mode: soft-light;
-    will-change: transform;
-  }
-
-  .dot-1 {
-    width: 700px;
-    height: 700px;
-    left: -200px;
-    top: -200px;
-    background: #25df53;
-    animation: dot-animation-1 20s infinite ease-in-out;
-  }
-
-  .dot-2 {
-    width: 650px;
-    height: 650px;
-    right: -100px;
-    top: -100px;
-    background: #2940f1;
-    animation: dot-animation-2 20s infinite ease-in-out;
-  }
-
-  .dot-3 {
-    width: 600px;
-    height: 600px;
-    top: 150px;
-    background: #bd3690;
-    animation: dot-animation-3 20s infinite ease-in-out;
-  }
-
-  @media only screen and (max-width: 600px) {
-    .animatedwrapper {
-      top: -500px;
-    }
-
-    .dot-1,
-    .dot-2,
-    .dot-3 {
-      width: 300px;
-      height: 300px;
-      filter: blur(30px);
-    }
-  }
-
-  /* Separate animations for each dot to create more interesting movement */
-  @keyframes dot-animation-1 {
-    0% {
-      transform: translate(0, 0);
-    }
-    33% {
-      transform: translate(200px, 100px);
-    }
-    66% {
-      transform: translate(100px, 300px);
-    }
-    100% {
-      transform: translate(0, 0);
-    }
-  }
-
-  @keyframes dot-animation-2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    33% {
-      transform: translate(-150px, 200px);
-    }
-    66% {
-      transform: translate(50px, 100px);
-    }
-    100% {
-      transform: translate(0, 0);
-    }
-  }
-
-  @keyframes dot-animation-3 {
-    0% {
-      transform: translate(0, 0);
-    }
-    33% {
-      transform: translate(100px, -100px);
-    }
-    66% {
-      transform: translate(200px, 50px);
-    }
-    100% {
-      transform: translate(0, 0);
-    }
-  }
-
   .heading {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 40vh;
+    height: 30vh;
     text-align: center;
   }
 
@@ -229,7 +107,7 @@ const allPostsData = posts.map((post) => {
     animation-delay: calc(var(--word-index, 0) * 0.05s);
   }
 
-  .animated-subtitle .word { */
+  .animated-subtitle .word {
     animation-delay: calc(0.15s + var(--word-index, 0) * 0.05s);
   }
 
@@ -251,37 +129,6 @@ const allPostsData = posts.map((post) => {
   .animated-heading .word:nth-child(3) {
     --word-index: 2;
   }
-
-  /* .animated-subtitle .word:nth-child(1) {
-    --word-index: 0;
-  }
-  .animated-subtitle .word:nth-child(2) {
-    --word-index: 1;
-  }
-  .animated-subtitle .word:nth-child(3) {
-    --word-index: 2;
-  }
-  .animated-subtitle .word:nth-child(4) {
-    --word-index: 3;
-  }
-  .animated-subtitle .word:nth-child(5) {
-    --word-index: 4;
-  }
-  .animated-subtitle .word:nth-child(6) {
-    --word-index: 5;
-  }
-  .animated-subtitle .word:nth-child(7) {
-    --word-index: 6;
-  }
-  .animated-subtitle .word:nth-child(8) {
-    --word-index: 7;
-  }
-  .animated-subtitle .word:nth-child(9) {
-    --word-index: 8;
-  }
-  .animated-subtitle .word:nth-child(10) {
-    --word-index: 9;
-  } */
 
   .posts {
     max-width: 800px;
